--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -8,6 +8,16 @@
 
   box-sizing: border-box;
 
+  a {
+    text-decoration: none;
+    font-weight: 300;
+    color: black;
+
+    &.active {
+      font-weight: 900;
+    }
+  }
+
   .logo {
     height: 100%;
     object-fit: contain;
