--- a/src/styles.css
+++ b/src/styles.css
@@ -1,8 +1,14 @@
-@import "./styles/variable.scss";
-@import "./styles/theme-overrides.scss";
-
 @import "primeng/resources/themes/lara-light-blue/theme.css";
 @import "primeng/resources/primeng.css";
+:root {
+  --bg-color: white;
+  --header-color: white;
+  --border-color: rgb(230, 230, 230);
+}
+
+.p-rating-cancel-item {
+  display: none;
+}
 
 html,
 body,
@@ -93,4 +99,4 @@ app-root {
 .disabled {
   pointer-events: none;
   opacity: 0.5;
-}
+}/*# sourceMappingURL=styles.css.map */
